mp edit form does not allow editing of mp aliases when it is a simple mp

--- a/client/src/app/forms2/config/molecular-profile-revise/molecular-profile-revise.form.html
+++ b/client/src/app/forms2/config/molecular-profile-revise/molecular-profile-revise.form.html
@@ -12,7 +12,7 @@
       [form]="form"
       [fields]="fields"
       [model]="model"
-      [options]="{}"
+      [options]="options"
       (modelChange)="model = $event">
     </formly-form>
   </form>
@@ -29,5 +29,5 @@
 touched: {{ form.touched }}
     </pre>
   </nz-col>
-</nz-row> 
+</nz-row>
  -->
