--- a/client/src/app/components/users/user-leaderboards/user-leaderboards.component.less
+++ b/client/src/app/components/users/user-leaderboards/user-leaderboards.component.less
@@ -1,46 +1,21 @@
 :host {
   display: block;
   nz-list-item {
-    background-color: green !important;
+    // background-color: green !important;
   }
   nz-list-item-meta {
-    background-color: pink !important;
+    // background-color: pink !important;
   }
-  // nz-list-item-meta-title ::ng-deep h4.ant-list-item-meta-title {
-  //   background-color: blue !important;
-  // }
 }
 
-nz-list-item-meta-title ::ng-deep h4.ant-list-item-meta-title {
+nz-list-item-meta-title ::ng-deep .ant-list-item-meta-title {
   margin-bottom: 0;
 }
+
 .time-select {
   min-width: 80px;
 }
 
 .board-header {
   font-weight: bold;
-  font-size: 125%;
 }
-
-// nz-card:first-of-type ::ng-deep {
-//   .ant-card-body {
-//     // remove card body padding
-//     padding: 0;
-//     // card title has a -1 bottom margin for some reason, partially occluding nz-description's top border
-//     margin-top: 1px;
-//   }
-// }
-// h4.leaderboard-title {
-//   margin-bottom: 0;
-//   padding: 0 8px;
-//   background-color: #fefefe;
-//   border-bottom: 1px solid #efefef;
-// }
-// ol.leaderboard-list {
-//   padding-inline-start: 1.5em;
-//   margin-bottom: 0;
-//   li {
-//     padding: 4px 0;
-//   }
-// }
