color code tags for codes indicating not-met status

--- a/client/src/app/forms2/types/acmg-code-select/acmg-code-select.type.html
+++ b/client/src/app/forms2/types/acmg-code-select/acmg-code-select.type.html
@@ -15,7 +15,7 @@
   (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
- 
+
 <!--  <nz-select
   [nzMode]="props.isMultiSelect ? 'multiple' : 'default'"
   [nzCustomTemplate]="selectedTemplate"
@@ -36,6 +36,7 @@
   <ng-container *ngFor="let result of result$ | ngrxPush; index as i">
     <ng-template #optionTemplates>
         <nz-tag
+          [ngClass]="{'code-not-met': !result.met }"
           nz-tooltip
         >{{ result.code }}</nz-tag>
       <span
