--- a/client/src/app/forms2/types/clingen-code-select/clingen-code-select.type.html
+++ b/client/src/app/forms2/types/clingen-code-select/clingen-code-select.type.html
@@ -21,6 +21,7 @@
   <ng-container *ngFor="let result of result$ | ngrxPush; index as i">
     <ng-template #optionTemplates>
         <nz-tag
+          [ngClass]="{'code-not-met': !result.met }"
           nz-tooltip
         >{{ result.code }}</nz-tag>
       <span
