--- a/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
@@ -95,15 +95,18 @@
             </nz-descriptions-item>
 
             <!-- ACMG Codes -->
-            <nz-descriptions-item nzTitle="ACMG Codes">
+            <nz-descriptions-item [nzSpan]='2' nzTitle="ACMG Codes">
               <ng-container *ngIf="assertionRules.requiresAcmgCodes(assertion.assertionType); else valueNotApplicable">
                 <ng-container *ngIf="assertion.acmgCodes.length > 0">
-                  <nz-tag
-                    nz-tooltip
-                    [nzTooltipTitle]="code.description"
-                    *ngFor="let code of assertion.acmgCodes"
-                    >{{ code.code }}</nz-tag
-                  >
+                  <cvc-tag-list>
+                    <nz-tag
+                      [ngClass]="{'code-not-met': !code.met }"
+                      nz-tooltip
+                      [nzTooltipTitle]="code.description"
+                      *ngFor="let code of assertion.acmgCodes"
+                      >{{ code.code }}</nz-tag
+                    >
+                  </cvc-tag-list>
                 </ng-container>
                 <ng-container *ngIf="assertion.acmgCodes.length == 0">
                   <span
@@ -116,15 +119,18 @@
             </nz-descriptions-item>
 
             <!-- ClinGen Codes -->
-            <nz-descriptions-item nzTitle="ClinGen/CGC/VICC Codes">
+            <nz-descriptions-item [nzSpan]='2' nzTitle="ClinGen/CGC/VICC Codes">
               <ng-container
                 *ngIf="assertionRules.requiresClingenCodes(assertion.assertionType); else valueNotApplicable">
                 <ng-container *ngIf="assertion.clingenCodes.length > 0">
-                  <nz-tag
-                    nz-tooltip
-                    [nzTooltipTitle]="code.description"
-                    *ngFor="let code of assertion.clingenCodes"
-                    >{{ code.code }}</nz-tag>
+                  <cvc-tag-list>
+                    <nz-tag
+                      [ngClass]="{'code-not-met': !code.met }"
+                      nz-tooltip
+                      [nzTooltipTitle]="code.description"
+                      *ngFor="let code of assertion.clingenCodes"
+                      >{{ code.code }}</nz-tag>
+                  </cvc-tag-list>
                 </ng-container>
                 <ng-container *ngIf="assertion.clingenCodes.length == 0">
                   <span
