--- a/client/src/app/components/users/user-leaderboards/user-leaderboards.component.less
+++ b/client/src/app/components/users/user-leaderboards/user-leaderboards.component.less
@@ -1,11 +1,23 @@
 :host {
   display: block;
-  nz-list-item {
-    // background-color: green !important;
+}
+
+nz-list-item {
+  // background-color: green !important;
+}
+nz-list-item ::ng-deep .ant-list-item-action {
+  margin-left: 1em;
+  li {
+    padding-right: 0;
+    nz-tag {
+      margin-right: 0;
+    }
   }
-  nz-list-item-meta {
-    // background-color: pink !important;
-  }
+}
+
+nz-badge ::ng-deep .ant-badge-count {
+  background-color: #662d91;
+  padding: 0 2px;
 }
 
 nz-list-item-meta-title ::ng-deep .ant-list-item-meta-title {
