--- a/client/src/app/views/sources/sources-detail/sources-detail.view.html
+++ b/client/src/app/views/sources/sources-detail/sources-detail.view.html
@@ -27,6 +27,9 @@
       {{ source.citation }}
     </nz-page-header-title>
     <nz-page-header-extra>
+      <nz-tag *ngIf="source.fullyCurated" nzColor='success'>
+        Fully Curated
+      </nz-tag>
       <cvc-link-tag
         *ngIf="source.sourceUrl"
         [href]="source.sourceUrl"
