--- a/client/src/app/forms2/config/source-submit/source-submit.form.html
+++ b/client/src/app/forms2/config/source-submit/source-submit.form.html
@@ -1,14 +1,25 @@
-  <ng-container *ngIf="this.fullyCuratedSource$ | ngrxPush as isFullyCurated">
-    <nz-alert *ngIf="isFullyCurated" nzType="warning" [nzMessage]="fullyCuratedAlert" > </nz-alert>
-    <ng-template #fullyCuratedAlert>
-        <p>
-          <strong>
-            This Source has been marked as fully curated by an Editor. Please double check that you still wish to submit a new Suggestion for it.
-          </strong>
-        </p>
-    </ng-template>
-    <br/>
-  </ng-container>
+<ng-container *ngIf="this.fullyCuratedSource$ | ngrxPush as isFullyCurated">
+  <nz-alert *ngIf="isFullyCurated" nzType="warning" [nzMessage]="fullyCuratedAlert" > </nz-alert>
+  <ng-template #fullyCuratedAlert>
+      <p>
+        <strong>
+          This Source has been marked as fully curated by an Editor. Please double check that you still wish to submit a new Suggestion for it.
+        </strong>
+      </p>
+  </ng-template>
+  <br/>
+</ng-container>
+<ng-container *ngIf="this.existingSourceSuggestion$ | ngrxPush as hasExistingSuggestion">
+  <nz-alert *ngIf="hasExistingSuggestion" nzType="warning" [nzMessage]="fullyCuratedAlert" > </nz-alert>
+  <ng-template #fullyCuratedAlert>
+      <p>
+        <strong>
+          This Source has already been Suggested. Please double check that you still wish to submit a new Suggestion for it.
+        </strong>
+      </p>
+  </ng-template>
+  <br/>
+</ng-container>
 <cvc-form-submission-status-display
   [mutationState]="this.mutationState"
   entityType="Source"
