--- a/client/src/app/components/organizations/organization-leaderboards/organization-leaderboards.component.less
+++ b/client/src/app/components/organizations/organization-leaderboards/organization-leaderboards.component.less
@@ -21,7 +21,13 @@ nz-badge ::ng-deep .ant-badge-count {
 }
 
 nz-list-item-meta-title ::ng-deep .ant-list-item-meta-title {
+  padding-top: 1px;
   margin-bottom: 0;
+}
+
+.list-height-block {
+  height: 160px;
+  overflow-y: scroll;
 }
 
 .time-select {
