--- a/client/src/app/components/users/user-leaderboards/user-leaderboards.component.less
+++ b/client/src/app/components/users/user-leaderboards/user-leaderboards.component.less
@@ -2,9 +2,6 @@
   display: block;
 }
 
-nz-list-item {
-  // background-color: green !important;
-}
 nz-list-item ::ng-deep .ant-list-item-action {
   margin-left: 1em;
   li {
@@ -21,7 +18,13 @@ nz-badge ::ng-deep .ant-badge-count {
 }
 
 nz-list-item-meta-title ::ng-deep .ant-list-item-meta-title {
+  padding-top: 1px;
   margin-bottom: 0;
+}
+
+.list-height-block {
+  height: 160px;
+  overflow-y: scroll;
 }
 
 .time-select {
