--- a/client/src/app/views/organizations/organizations-home/organizations-home.page.html
+++ b/client/src/app/views/organizations/organizations-home/organizations-home.page.html
@@ -49,15 +49,16 @@
         </nz-space>
       </nz-col>
     </nz-row>
-    <div nz-row>
-      <div
-        nz-col
-        [nzSpan]="24">
+    <nz-row [nzGutter]="[8, 16]">
+      <nz-col nzSpan="24">
+        <cvc-organization-leaderboards></cvc-organization-leaderboards>
+      </nz-col>
+      <nz-col [nzSpan]="24">
         <div class="content">
           <cvc-organizations-table
             cvcTitle="Browse Organizations"></cvc-organizations-table>
         </div>
-      </div>
-    </div>
+      </nz-col>
+    </nz-row>
   </nz-page-header-content>
 </nz-page-header>
