--- a/client/src/app/components/users/user-leaderboards/user-leaderboards.component.less
+++ b/client/src/app/components/users/user-leaderboards/user-leaderboards.component.less
@@ -12,6 +12,7 @@ nz-list-item ::ng-deep .ant-list-item-action {
   }
 }
 
+// override badge's default red color
 nz-badge ::ng-deep .ant-badge-count {
   background-color: #662d91;
   padding: 0 2px;
@@ -20,6 +21,7 @@ nz-badge ::ng-deep .ant-badge-count {
 nz-list-item-meta-title ::ng-deep .ant-list-item-meta-title {
   padding-top: 1px;
   margin-bottom: 0;
+  font-weight: normal; // prevent cvc-tag labels from inheriting h4's bold font-weight
 }
 
 .list-height-block {
