user-detail avatar area looking good

--- a/client/src/app/components/shared/avatar-uploader/avatar-uploader.component.html
+++ b/client/src/app/components/shared/avatar-uploader/avatar-uploader.component.html
@@ -8,7 +8,8 @@
 <button
   nz-button
   nzSize="small"
-  nzType="link"
+  nzType="primary"
+  nzBlock
   (click)="profileImage.click()">
-  Upload Image
+  Update Image
 </button>
