--- a/client/src/app/views/users/users-detail/users-detail.component.html
+++ b/client/src/app/views/users/users-detail/users-detail.component.html
@@ -3,287 +3,71 @@
   </cvc-section-navigation>
 
   <nz-page-header class="site-page-header">
-    <!--extra-->
     <nz-page-header-content>
-      <nz-alert
-        *ngIf="this.uploadError"
-        nzType="error"
-        nzCloseable
-        nzMessage="There was an error updating your profile image."
-        (nzOnClose)="this.uploadError = false"></nz-alert>
-      <nz-alert
-        *ngIf="this.updateSuccess"
-        nzType="success"
-        nzCloseable
-        nzMessage="Profile image successfully updated."
-        (nzOnClose)="this.updateSuccess = false"></nz-alert>
-      <div class="profile-content">
-        <nz-row [nzGutter]="16">
-          <nz-col [nzSpan]="3">
-            <div class="user-avatar">
-              <cvc-user-avatar
-                [user]="user"
-                [size]="128"></cvc-user-avatar>
-            </div>
-            <div class="user-name">
+      <nz-row [nzGutter]="[8, 8]">
+        <nz-col nzSpan="128px">
+          <nz-space nzDirection="vertical">
+            <cvc-user-avatar
+              [user]="user"
+              shape="square"
+              [size]="128"
+              *nzSpaceItem></cvc-user-avatar>
+            <div
+              class="profile-value"
+              *nzSpaceItem>
+              <i
+                nz-icon
+                [nzType]="'civic-' + (user.role | lowercase)"
+                nzTheme="twotone"
+                [nzTwotoneColor]="user.role | titlecase | entityColor"></i>
               <span nz-typography>
-                <strong>{{ user.name }}</strong>
+                <strong> {{ user.username }}</strong>
               </span>
-              <ng-container *ngIf="this.ownProfile$ | ngrxPush">
-                <cvc-avatar-uploader
-                  (uploadComplete)="profileUploadComplete($event)">
-                </cvc-avatar-uploader>
-              </ng-container>
             </div>
-            <div class="user-socials">
-              <nz-space nzAlign="center">
-                <ng-container *ngIf="user.twitterHandle">
-                  <a
-                    href="http://twitter.com/{{ user.twitterHandle }}"
-                    target="_blank"
-                    *nzSpaceItem>
-                    <i
-                      nz-icon
-                      nzType="twitter"
-                      nzTheme="outline"></i>
-                  </a>
-                </ng-container>
-
-                <ng-container *ngIf="user.facebookProfile">
-                  <a
-                    href="http://facebook.com/{{ user.facebookProfile }}"
-                    target="_blank"
-                    *nzSpaceItem>
-                    <i
-                      nz-icon
-                      nzType="facebook"
-                      nzTheme="outline"></i>
-                  </a>
-                </ng-container>
-
-                <ng-container *ngIf="user.linkedinProfile">
-                  <a
-                    href="http://linkedin.com/in/{{ user.linkedinProfile }}"
-                    target="_blank"
-                    *nzSpaceItem>
-                    <i
-                      nz-icon
-                      nzType="linkedin"
-                      nzTheme="outline"></i>
-                  </a>
-                </ng-container>
-                <ng-container *ngIf="user.orcid">
-                  <a
-                    href="https://orcid.org/{{ user.orcid }}"
-                    target="_blank"
-                    *nzSpaceItem>
-                    <img
-                    src="/assets/images/orcid-logo.svg"
-                    class="orcid-logo"
-                    alt="ORCID Logo" />
-                  </a>
-                </ng-container>
-              </nz-space>
-            </div>
-          </nz-col>
-          <nz-col [nzSpan]="13">
-            <nz-card
-              nzTitle="Profile"
-              class="user-profile"
-              nzSize="small"
-              [nzExtra]="updateProfile">
-              <ng-template #updateProfile>
-                <ng-container *ngIf="this.ownProfile$ | ngrxPush">
-                  <button
-                    nz-button
-                    nzSize="small"
-                    nzType="link"
-                    (click)="this.updateProfileModalVisible = true">
-                    Edit Profile
-                  </button>
-                </ng-container>
-              </ng-template>
+            <div *nzSpaceItem>
               <nz-descriptions
-                nzBordered
                 nzLayout="vertical"
-                [nzColumn]="7"
-                nzSize="small">
+                nzSize="small"
+                [nzBordered]="true"
+                [nzColumn]="1">
+                <!-- username -->
                 <nz-descriptions-item
-                  [nzSpan]="2"
+                  *ngIf="user.name"
                   nzTitle="Name">
                   {{ user.name }}
                 </nz-descriptions-item>
 
-                <nz-descriptions-item
-                  [nzSpan]="2"
-                  nzTitle="User Name">
-                  {{ user.username }}
-                </nz-descriptions-item>
-
-                <nz-descriptions-item
-                  [nzSpan]="1"
-                  nzTitle="Role">
+                <!-- role -->
+                <nz-descriptions-item nzTitle="Role">
                   {{ user.role | enumToTitle }}
                 </nz-descriptions-item>
-
-                <nz-descriptions-item
-                  [nzSpan]="2"
-                  nzTitle="Area of Expertise">
-                  <ng-container *ngIf="user.areaOfExpertise">
-                    {{ user.areaOfExpertise | enumToTitle }}
-                  </ng-container>
-                  <ng-container *ngIf="!user.areaOfExpertise">
-                    <span
-                      nz-typography
-                      nzType="secondary">
-                      <i>Unspecified</i>
-                    </span>
-                  </ng-container>
-                </nz-descriptions-item>
-
-                <nz-descriptions-item
-                  [nzSpan]="2"
-                  nzTitle="Country">
-                  <ng-container *ngIf="user.country">
-                    {{ user.country.name }}
-                  </ng-container>
-                  <ng-container *ngIf="!user.country">
-                    <span
-                      nz-typography
-                      nzType="secondary">
-                      <i>Unspecified</i>
-                    </span>
-                  </ng-container>
-                </nz-descriptions-item>
-
-                <nz-descriptions-item
-                  [nzSpan]="5"
-                  nzTitle="Organizations">
-                  <ng-container *ngIf="user.organizations.length > 0">
-                    <cvc-organization-tag
-                      *ngFor="let org of user.organizations"
-                      [org]="org"></cvc-organization-tag>
-                  </ng-container>
-                  <ng-container *ngIf="user.organizations.length === 0">
-                    <span
-                      nz-typography
-                      nzType="secondary">
-                      <i>User is not a member of any Organizations.</i>
-                    </span>
-                  </ng-container>
-                </nz-descriptions-item>
               </nz-descriptions>
-              <nz-descriptions
-                nzBordered
-                nzLayout="vertical"
-                class="user-bio"
-                nzSize="small">
-                <nz-descriptions-item
-                  [nzSpan]="4"
-                  nzTitle="Bio">
-                  <ng-container *ngIf="user.bio">
-                    {{ user.bio }}
-                  </ng-container>
-                  <ng-container *ngIf="!user.bio">
-                    <span
-                      nz-typography
-                      nzType="secondary">
-                      <i>User has not provided a bio.</i>
-                    </span>
-                  </ng-container>
-                </nz-descriptions-item>
-              </nz-descriptions>
-              <nz-descriptions
-                nzBordered
-                *ngIf="user.role === 'EDITOR' || user.role === 'ADMIN'"
-                [nzTitle]="coiTitle"
-                [nzExtra]="updateCoi"
-                [nzColumn]="3"
-                class="user-coi"
-                nzSize="small">
-                <ng-template #coiTitle>
-                  Editor Conflict of Interest Statement
-                </ng-template>
-                <ng-template #updateCoi>
-                  <ng-container *ngIf="this.ownProfile$ | ngrxPush">
-                    <button
-                      nz-button
-                      nzType="link"
-                      nzSize="small"
-                      (click)="this.updateCoiModalVisible = true">
-                      Update COI
-                    </button>
-                  </ng-container>
-                </ng-template>
-                <ng-container
-                  *ngIf="user.mostRecentConflictOfInterestStatement">
-                  <nz-descriptions-item
-                    [nzSpan]="1"
-                    nzTitle="Status">
-                    {{
-                      user.mostRecentConflictOfInterestStatement.coiStatus
-                        | enumToTitle
-                    }}
-                  </nz-descriptions-item>
-                  <nz-descriptions-item
-                    [nzSpan]="1"
-                    nzTitle="Updated">
-                    {{
-                      user.mostRecentConflictOfInterestStatement.createdAt
-                        | date : 'shortDate'
-                    }}
-                  </nz-descriptions-item>
-                  <nz-descriptions-item
-                    [nzSpan]="1"
-                    nzTitle="Expires">
-                    {{
-                      user.mostRecentConflictOfInterestStatement.expiresAt
-                        | date : 'shortDate'
-                    }}
-                  </nz-descriptions-item>
-                  <nz-descriptions-item
-                    [nzSpan]="3"
-                    nzTitle="Statement">
-                    <ng-container
-                      *ngIf="
-                        user.mostRecentConflictOfInterestStatement.coiPresent;
-                        else noStatement
-                      ">
-                      {{
-                        user.mostRecentConflictOfInterestStatement.coiStatement
-                      }}
-                    </ng-container>
-                    <ng-template #noStatement>
-                      I do not have any potential conflicts of interest.
-                    </ng-template>
-                  </nz-descriptions-item>
-                </ng-container>
-                <ng-container
-                  *ngIf="!user.mostRecentConflictOfInterestStatement">
-                  <nz-descriptions-item
-                    [nzSpan]="3"
-                    nzTitle="Status"
-                    >None on file.</nz-descriptions-item
-                  >
-                </ng-container>
-              </nz-descriptions>
-            </nz-card>
-          </nz-col>
-          <nz-col [nzSpan]="8">
-            <nz-card
-              nzSize="small"
-              nzTitle="Curation Stats">
-              <cvc-stats-card
-                [stats]="user.statsHash"
-                header="User Statistics"></cvc-stats-card>
-            </nz-card>
-          </nz-col>
-        </nz-row>
-      </div>
-      <cvc-tab-navigation [tabs]="tabs$ | ngrxPush"> </cvc-tab-navigation>
-      <div class="content">
-        <router-outlet></router-outlet>
-      </div>
+            </div>
+            <ng-container *ngIf="this.ownProfile$ | ngrxPush">
+              <button
+                *nzSpaceItem
+                nz-button
+                nzSize="small"
+                nzType="primary"
+                nzBlock
+                (click)="updateProfileModalVisible = true">
+                Edit Profile
+              </button>
+              <cvc-avatar-uploader
+                *nzSpaceItem
+                (uploadComplete)="profileUploadComplete($event)">
+              </cvc-avatar-uploader>
+            </ng-container>
+          </nz-space>
+        </nz-col>
+        <nz-col nzFlex="auto"> </nz-col>
+        <nz-col nzSpan="24">
+          <cvc-tab-navigation [tabs]="tabs$ | ngrxPush"> </cvc-tab-navigation>
+          <div class="content">
+            <router-outlet></router-outlet>
+          </div>
+        </nz-col>
+      </nz-row>
     </nz-page-header-content>
   </nz-page-header>
   <nz-modal
