--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -2,7 +2,11 @@
 @import 'themes/overrides/descriptions-overrides.less';
 @import 'themes/global-variables.less';
 
-.profile-value {
+.profile-content {
+  flex-wrap: nowrap;
+}
+
+.user-pseudo-tag {
   text-align: center;
   background-color: #f4f4f4;
   border: 1px solid #d9d9d9;
