organizations displayed using cvc-tag-overflow

--- a/client/src/app/components/users/user-avatar/user-avatar.component.html
+++ b/client/src/app/components/users/user-avatar/user-avatar.component.html
@@ -8,6 +8,7 @@
 <ng-template #noAvatar>
   <nz-avatar
     nz-comment-avatar
+    [nzShape]="shape ? shape : 'circle'"
     [nzSize]="size"
     [nzText]="user.displayName.charAt(0) | uppercase"></nz-avatar>
 </ng-template>
