--- a/client/src/app/views/users/users-detail/users-detail.component.less
+++ b/client/src/app/views/users/users-detail/users-detail.component.less
@@ -25,6 +25,14 @@
   }
 }
 
+.editor-coi-card {
+  ::ng-deep .ant-card-body {
+    padding: 0;
+    // prevent card body and descriptions container double width border
+    margin: 0 -1px -1px -1px;
+  }
+}
+
 //   .user-socials i {
 //     font-size: 16px;
 //     color: black;
